# fbctf-2019-challenges

./: README.md
crypto/frank/: Dockerfile  README.md  docker-compose.yml  flag
crypto/keybaseish/: Dockerfile  README  docker-compose.yml  dsks.py  solution.py
crypto/netscream/: README.md  flag  key
crypto/postquantumsig/: Dockerfile  README.md  docker-compose.yml  flag  generate.py  postquantumsig.xinetd  solved.py
crypto/storagespace/: Dockerfile  README.md  docker-compose.yml  flag  solve.py  test.py
misc/evil/: README.md
misc/homework_assignment_1337/: Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh
misc/j0hnny_5/: Makefile  README.md  client.go  server.go
misc/osquery_game/: Dockerfile  README.md  challenge.cpp  docker-compose.yml  emoji.h
misc/regexicide/: Dockerfile  README  docker-compose.yml  docker-entrypoint.sh  docker-entrypoint.sh.template  gen-from-template.sh  hhvm.prod.ini  index.php  index.php.template  redeploy.sh  solved.sh
misc/whysapp/: Dockerfile  Makefile  README.md  Whysapp.ex  docker-compose.yml  docker-entrypoint.sh  requirements.txt  run.iex  server.py
pwnables/asciishop/: Dockerfile  Makefile  README.md  asciishop  asciishop.c  asciishop.xinetd  asciishop_clean.c  asciishop_dirty.c  build_final.sh  docker-compose.yml  exploit.py  flag  fuzz.py  obfuscate.py  remote.py
pwnables/babylist/: Dockerfile  Makefile  README.md  (+5 more)
reversing/SOMBRERO_ROJO/crypto/: CMakeLists.txt  rc4block.c  rc4block.h
reversing/SOMBRERO_ROJO/test/: CMakeLists.txt  main.c  release.sh  retest.sh  test_decrypt.sh  test_encrypt.sh
(+223 files in other folders)
